// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlockHeader rendering renders expected elements when configured is false 1`] = `
<h2
  className="BlockHeader TestClass"
>
  <span
    className="BlockHeader__indicator"
  >
    (optional)
  </span>
</h2>
`;

exports[`BlockHeader rendering renders expected elements when configured is true 1`] = `
<h2
  className="BlockHeader"
>
  <span
    className="BlockHeader__indicator BlockHeader--configured"
  >
    (configured)
  </span>
</h2>
`;
